# cpp_quality_benchmark

./: README.md
asan_ubsan/: CMakeLists.txt  asan_err.txt  main.cpp  ubsan_err.txt
clang_format/: CMakeLists.txt  main.cpp  main_formatted.cpp
clang_tidy/: CMakeLists.txt  clang_format_output.txt  clang_tidy_output.txt  main.cpp
clang_tidy/lib/: CMakeLists.txt  some_lib.cpp  some_lib.h
compiler_warnings/: CMakeLists.txt  main.cpp
cppcheck/: CMakeLists.txt  cppcheck_output.txt  main.cpp
thread_sanitizer/: CMakeLists.txt  main.cpp  sanitizer_err.txt
